--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>© {{ 2025 }} Derechos de autor</small>
+    <small>© {{ 2025 }} Derechos de autor Jaime Castillo</small>
   </footer>
 
   {% block extra_js %}{% endblock %}
