--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <nav class="nav">
       <a href="{{ url_for('index') }}">Inicio</a>
       <a href="{{ url_for('about') }}">Acerca de</a>
+      <a href="{{ url_for('contacto') }}">Contacto</a>
     </nav>
   </header>
 
