--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 {% block title %}Inicio{% endblock %}
 
 {% block content %}
-<h1>Bienvenido a mi sitio Flask</h1>
-<p>Esta es la página de inicio de mi aplicación Flask.</p>
-<p>Utiliza el menú de navegación para explorar más.</p>
+<h1>Explora mi mundo Flask </h1>
+<h2>Desarrollo Web con Estilo</h2>
+<p>Descubre cómo Flask puede ayudarte a crear aplicaciones web </p>
+<p>modernas y funcionales. Usa el menú para comenzar tu recorrido..</p>
 {% endblock %}
